@startuml Code_Review

' ============================================
' Module 8: Expert Code Review
' FREQ-41, UC-08
' ============================================

skinparam classAttributeIconSize 0

class Organization {
    - organizationId: String
}

class Researcher {
    - researcherId: String
}

class CodeReviewEngagement {
    - reviewId: String
    - repositoryUrl: String
    - codeScope: String
    - status: Enum {Pending, InProgress, Completed}
    + create()
    + assignReviewers()
}

class CodeReviewFinding {
    - findingId: String
    - issueType: String
    - severity: String
    - lineNumber: Integer
    - recommendation: String
    + report()
}

Organization "1" -- "0..*" CodeReviewEngagement : initiates
CodeReviewEngagement "1" -- "0..*" Researcher : assigns
CodeReviewEngagement "1" -- "0..*" CodeReviewFinding : produces

@enduml
